# testpoetrypypi

./: .gitignore  README.md  pyproject.toml  pytest.ini  runtest.py
.circleci/: config.yml
semantic_release/: __init__.py  show_version.py
testpoetrypypi/: __init__.py  hello.py
tests/: test_testpoetrypypi.py
