[tool.poetry]
name = "testpoetrypypi"
version = "0.1.0"
description = ""
authors = ["Jeff"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
poetry-version = "^0.1.5"

[tool.poetry.scripts]
runtest = "runtest:main"
testpoetrypypi = "testpoetrypypi:main"


[tool.poetry.dev-dependencies]
pytest = "^3.0"
python-semantic-release = "^4.3.4"
tomlkit = "^0.5.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
# version_variable = "semantic_release/__init__.py:__version__"
version_variable = ""
# version_source = "commit"
# version_source = "tag"
version_source = ""
