[tool.poetry]
name = "testpoetrypypi"
version = "0.1.0"
description = ""
authors = ["Jeff"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/maxjeffos/testpoetrypypi"
documentation = "https://github.com/maxjeffos/testpoetrypypi"
repository = "https://github.com/maxjeffos/testpoetrypypi"
keywords = ["poetry", "pypi", "circleci"]

[tool.poetry.dependencies]
python = "^3.7"
poetry-version = "^0.1.5"

[tool.poetry.scripts]
runtest = "runtest:main"
testpoetrypypi = "testpoetrypypi:main"


[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-black = "^0.3.7"
pytest-cov = "^2.7"
pytest-isort = "^0.3.1"
python-semantic-release = "^4.3.4"
tomlkit = "^0.5.8"

[tool.semantic_release]
version_variable = "semantic_release/__init__.py:__version__"
# version_source = "commit"
version_source = "tag"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

