[tool.poetry]
name = "testpoetrypypi"
version = "0.1.0"
description = ""
authors = ["maxjeffos"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
poetry-version = "^0.1.5"

[tool.poetry.scripts]
runtest = "runtest:main"
testpoetrypypi = "testpoetrypypi:main"


[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"
pytest-isort = "^1.3.0"
python-semantic-release = "^4.3.4"
tomlkit = "^0.5.8"

[tool.semantic_release]
version_variable = "semantic_release/__init__.py:__version__"
# version_source = "commit"
version_source = "tag"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

